syntax = "proto3";

option csharp_namespace = "calc.multiply";

package multiply;


service Multiplication {
  
  rpc Multiply (MultiplicationRequest) returns (MultiplicationResponse);
}


message MultiplicationRequest {
  int32 op1 = 1;
  int32 op2 = 2;
}


message MultiplicationResponse {
  int32 result = 1;
}
